// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag - Snapshots > matches snapshot for long tag name 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(255, 85, 0, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    very-long-tag-name-example
  </p>
  <p
    class="text-sm ml-1.5 text-foreground/50 font-medium"
    data-testid="tag-count"
  >
    7
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot when clicked 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(255, 51, 0, 0.3); border: 1px solid rgb(255, 51, 0);"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    been clicked
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot with all props combined 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200 combined-tag"
  data-testid="combined-test"
  style="background-color: rgba(255, 0, 4, 0.3); border: 1px solid rgb(255, 0, 4);"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    defi
  </p>
  <p
    class="text-sm ml-1.5 text-foreground/50 font-medium"
    data-testid="tag-count"
  >
    123
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot with count 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(171, 0, 255, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    sixteen count
  </p>
  <p
    class="text-sm ml-1.5 text-foreground/50 font-medium"
    data-testid="tag-count"
  >
    16
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200 custom-tag"
  data-testid="tag"
  style="background-color: rgba(28, 255, 0, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    custom-class
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot with default props 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(255, 209, 0, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    default props
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot with large count 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(255, 0, 234, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    large count
  </p>
  <p
    class="text-sm ml-1.5 text-foreground/50 font-medium"
    data-testid="tag-count"
  >
    999999
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot with zero count 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(0, 255, 151, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    zero count
  </p>
  <p
    class="text-sm ml-1.5 text-foreground/50 font-medium"
    data-testid="tag-count"
  >
    0
  </p>
</div>
`;

exports[`Tag - Snapshots > matches snapshot without clicked 1`] = `
<div
  class="w-fit flex items-center justify-between px-3 h-8 rounded-md cursor-pointer transition-all duration-200"
  data-testid="tag"
  style="background-color: rgba(0, 22, 255, 0.3); border: 1px solid transparent;"
>
  <p
    class="text-sm font-semibold text-foreground"
    data-testid="tag-name"
  >
    clicked false
  </p>
</div>
`;
